added new methods to fetch user details
